Made the refactor to the class RingReader.